remove deprecated methods from server-side interfaces (#2673)
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>